--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
-button {
-  width: 5rem;
-  height: 3rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+video {
+  margin: 1rem;
+  max-width: 90vw;
+}
+
+.camera-list {
+  margin-top: 1rem;
 }
